# Fast_perch

./: .gitignore  start.txt
.catkin_tools/profiles/default/: devel_collisions.txt
bag/: bag.sh  config.txt  target.sh  target1.bag  target2.bag
bag/collision/: cost.txt  long.txt  perch.txt  propose.config  snap.txt
bag/real/: kino.txt  target.bag
bag/scripts/: bag2txt.py  playbag.py
bag/union/: iris_0_055.bag  perch.txt
bag/union/land/: config.txt  perch.txt  snap.txt  target_2025-03-13-12-35-14.bag
logs/odom_visualization/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
sh_utils/: start.sh
src/new_path_finder/: CMakeLists.txt  package.xml
src/new_path_finder/include/path_finder/: TesterPathFinder.h  brrt.h  brrt_star.h  rrt.h  rrt_sharp.h  rrt_star.h  sampler.h
src/new_path_finder/include/visualization/: visualization.hpp
src/new_path_finder/launch/: final.rviz  rviz.launch  test_planners.launch  traj.rviz  traj1.rviz
src/new_path_finder/src/: test_planner.cpp
src/occ_grid/include/occ_grid/: occ_map.h
src/occ_grid/src/: occ_map.cpp
src/odom_vis/odom_visualization/: CMakeLists.txt
src/odom_vis/odom_visualization/launch/: gazebo_state.launch
src/path_finder/: CMakeLists.txt
src/path_finder/src/: test_planner.cpp
src/plan_manager/: CMakeLists.txt  package.xml
src/plan_manager/config/: rviz_sim.rviz
src/plan_manager/include/: plan_manager.h  traj_min_jerk.hpp
src/plan_manager/launch/: corridor.launch  perching.launch
src/plan_manager/params/: occ_map.yaml  run_hill.yaml  run_real.yaml
src/plan_manager/src/: manager_node.cpp  plan_manager.cpp  traj_server.cpp
src/sub_topic/: CMakeLists.txt  package.xml
src/sub_topic/include/: sub.h
src/sub_topic/launch/: sub.launch
src/sub_topic/src/: sub.cpp  sub_node.cpp
src/sub_topic/txt/collision/compare/: imu1.txt  imu2.txt  odom.txt  traj2.txt
src/sub_topic/txt/collision/propose/: imu1.txt  odom.txt  traj2.txt
src/sub_topic/txt/real/land/: imu1.txt  imu2.txt  odom.txt  traj2.txt
src/sub_topic/txt/union/: imu1.txt  imu2.txt  odom.txt  traj2.txt
src/traj_opt/: CMakeLists.txt  package.xml
src/traj_opt/src/: traj_opt_perching.cc
src/traj_utils/: CMakeLists.txt
src/uneven_map/: package.xml
src/uneven_map/maps/: collision.pcd  new_topcl.py  newhill.pcd  read_pcl.py  singlepeak.pcd  to_pcl.py
src/uneven_map/src/: uneven_map.cpp
src/uneven_map/worlds/: map_2.world  map_newhill.world  map_singlepeak.world
(+24 files in other folders)
