<?xml version="1.0"?>
<package format="2">
  <name>plan_manager</name>
  <version>0.0.0</version>
  <description>The plan_manager package</description>

  <maintainer email="jlji@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>traj_opt</depend>
  <depend>traj_utils</depend>
  <build_depend>uneven_map</build_depend>
  <exec_depend>uneven_map</exec_depend>
  <build_depend>path_finder</build_depend>
  <exec_depend>path_finder</exec_depend>

</package>